--- a/forum/pom.xml
+++ b/forum/pom.xml
@@ -93,6 +93,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>Forum</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
